--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "extern/Pomme"]
 	path = extern/Pomme
 	url = https://github.com/jorio/Pomme
+[submodule "extern/nativefiledialog"]
+	path = extern/nativefiledialog
+	url = https://github.com/mlabbe/nativefiledialog
