Remove nativefiledialog now that we have FileScreen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,20 +75,6 @@ set(GAME_ALL_SOURCES
 	${GAME_HEADERS}
 )
 
-set(NATIVEFILEDIALOG_SOURCES
-	${CMAKE_CURRENT_SOURCE_DIR}/extern/nativefiledialog/src/common.h
-	${CMAKE_CURRENT_SOURCE_DIR}/extern/nativefiledialog/src/nfd_common.c
-	${CMAKE_CURRENT_SOURCE_DIR}/extern/nativefiledialog/src/nfd_common.h
-)
-
-if(APPLE)
-	list(APPEND NATIVEFILEDIALOG_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/extern/nativefiledialog/src/nfd_cocoa.m)
-elseif(WIN32)
-	list(APPEND NATIVEFILEDIALOG_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/extern/nativefiledialog/src/nfd_win.cpp)
-else()
-	list(APPEND NATIVEFILEDIALOG_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/extern/nativefiledialog/src/nfd_zenity.c)
-endif()
-
 #------------------------------------------------------------------------------
 # SOURCE GROUPS
 #------------------------------------------------------------------------------
@@ -112,19 +98,16 @@ endif()
 if(WIN32)
 	# "WIN32" here is equivalent to /SUBSYSTEM:WINDOWS for MSVC
 	add_executable(${GAME_TARGET} WIN32
-		${NATIVEFILEDIALOG_SOURCES}
 		${GAME_ALL_SOURCES}
 	)
 elseif(APPLE)
 	add_executable(${GAME_TARGET} MACOSX_BUNDLE
-		${NATIVEFILEDIALOG_SOURCES}
 		${GAME_ALL_SOURCES}
 		${GAME_ICNS}
 		${SDL2_LIBRARIES}
 	)
 else()
 	add_executable(${GAME_TARGET}
-		${NATIVEFILEDIALOG_SOURCES}
 		${GAME_ALL_SOURCES}
 	)
 endif()
@@ -137,7 +120,6 @@ target_include_directories(${GAME_TARGET} PRIVATE
 	${GAME_SRCDIR}/Headers
 	${GAME_SRCDIR}/Headers/Glue
 	#${GAME_SRCDIR}/Headers/QD3DCompat
-	${CMAKE_CURRENT_SOURCE_DIR}/extern/nativefiledialog/src/include
 )
 
 target_link_libraries(${GAME_TARGET}
@@ -146,7 +128,7 @@ target_link_libraries(${GAME_TARGET}
 	${OPENGL_LIBRARIES}
 	"$<$<BOOL:${APPLE}>:-framework Foundation>"		# Required for KillMacMouseAcceleration
 	"$<$<BOOL:${APPLE}>:-framework IOKit>"			# Required for KillMacMouseAcceleration
-	"$<$<BOOL:${APPLE}>:-framework AppKit>"			# Required for nativefiledialog
+#	"$<$<BOOL:${APPLE}>:-framework AppKit>"			# Required for nativefiledialog
 )
 
 #------------------------------------------------------------------------------
