--- a/packaging/io.jor.ottomatic.desktop
+++ b/packaging/io.jor.ottomatic.desktop
@@ -3,7 +3,8 @@ Type=Application
 Version=1.0
 Name=Otto Matic
 Comment=Save the Earth from the clutches of the Giant Brain from Planet X
-Icon=ottomatic-desktopicon
+Comment[fr]=Sauvez la Terre de l’emprise du Cerveau Géant de la Planète X
+Icon=io.jor.ottomatic
 Exec=OttoMatic
 Terminal=false
 Categories=Game;
