--- a/.github/workflows/FullCompileCheck.yml
+++ b/.github/workflows/FullCompileCheck.yml
@@ -16,7 +16,7 @@ jobs:
           - { name: Linux/GCC, os: ubuntu-22.04, extraflags: "--system-sdl" }
           - { name: Linux/Clang, os: ubuntu-22.04, extraflags: "--system-sdl", prefix: "CC=clang CXX=clang++"}
           - { name: Windows/VS2022, os: windows-2022, extraflags: "-G 'Visual Studio 17 2022'" }
-          - { name: Mac, os: macos-11 }
+          - { name: Mac, os: macos-latest }
 
     steps:
       - name: Install Linux build dependencies
@@ -25,7 +25,7 @@ jobs:
           sudo apt update
           sudo apt install libsdl2-dev
 
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: 'recursive'
           
