--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,7 @@ set(POMME_NO_INPUT true)
 set(POMME_NO_GRAPHICS true)
 set(POMME_NO_QD3D true)
 set(POMME_NO_MP3 true)
+add_compile_definitions(POMME_CASE_SENSITIVE_FSSPEC=1)
 
 #------------------------------------------------------------------------------
 # DEPENDENCIES
